syntax = "proto3";

package pb.family.accounts;

import "google/api/annotations.proto";

option go_package = "github.com/taeho-io/family/idl/generated/go/pb/family/accounts;accounts";

service AccountsService {
    rpc Register (RegisterRequest) returns (RegisterResponse) {
        option (google.api.http) = {
            post: "/v1/accounts/register"
            body: "*"
        };
    }
    rpc LogIn (LogInRequest) returns (LogInResponse) {
        option (google.api.http) = {
            post: "/v1/accounts/logIn"
            body: "*"
        };
    }
}

enum AuthType {
    NONE = 0;
    EMAIL = 1;
}

message Account {
    AuthType auth_type = 1;
    string account_id = 2;
    string email = 3;
    string hashed_password = 4;
    string full_name = 5;
    int64 created_at = 6;
    int64 updated_at = 7;
}

message RegisterRequest {
    AuthType auth_type = 1;
    string email = 2;
    string password = 3;
    string full_name = 4;
}

message RegisterResponse {
    AuthType auth_type = 1;
    string account_id = 2;
}

message LogInRequest {
    AuthType auth_type = 1;
    string email = 2;
    string password = 3;
}

message LogInResponse {
    string access_token = 1;
    string refresh_token = 2;
    string account_id = 3;
    string token_type = 4;
    int64 expires_in = 5;
}
